fix cost display overflow

--- a/css/app.css
+++ b/css/app.css
@@ -50,8 +50,8 @@ table.grid {
 
 table.grid td {
   padding: 0;
-  height: 25px;
-  width: 25px;
+  height: 30px;
+  width: 30px;
   text-align: center;
 }
 
@@ -66,14 +66,17 @@ td.gutter {
 .visited {
   background-color: red;
   color: white;
+  font-size: 12px;
 }
 
 .queued {
   background-color: blue;
   color: white;
+  font-size: 12px;
 }
 
 .currentnode {
+  font-size: 12px;
   background-color: greenyellow;
 }
 
@@ -107,6 +110,6 @@ td.gutter {
 }
 
 .box {
-  width: 25px;
-  height: 25px;
+  width: 30px;
+  height: 30px;
 }
